Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7356

configure --disable-shared broken for server builds

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.11.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      While testing LU-5541 patch it was discovered that if you use --disable-shared for configure for lustre that lustre snmp and the mount utility components for zfs and ldiskfs will not build. This is due to the Makefiles hardcoding the --shared option.

            utopiabound Nathaniel Clark
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: